--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,13 @@
 language: ruby
-install: bundle install
-script: bundle exec rspec
 rvm:
   - 2.0.0-p247
   - 2.3.1
 before_install:
   - gem update --system
   - gem install bundler
-before_deploy: bundle exec gem build sourcerer.gemspec
+install: bundle install
+script: bundle exec rspec
+after_success: bundle exec gem build sourcerer.gemspec
 deploy:
   - provider: releases
     skip_cleanup: true
