--- a/.travis.yml
+++ b/.travis.yml
@@ -21,10 +21,10 @@ deploy:
       tags: true
   - provider: rubygems
     gem: sourcerer_
-    gemspec: sourcerer.gemspec
+    gemspec: sourcerer_.gemspec
     skip_cleanup: true
     api_key:
-      secure: G+N9t4WbGO3WAbEhX/LpmpS5tCv+56CgV5X56D5fw1J1AhBW0TX6gbg0bvF7XVGmsIx1pq6/tbADB569RSRqUUA4lPA505zQBrU6gmKQJ+9rQ1dHqPvNVuLKxKGGpkZZyH4XLTtmI8hCFM7J9iuYD4MXD9bzYwx35fR5qe8JLqk=
+      secure: tBgVMYWg3xUKbKW0VmBfF+yr7lBzJfynWWLknIZ4Kco+dpGM4e91bQp8fSm0fO7h1KKpfAoIYNJzzhShD7RmnnC1+yym6VgHdVRYp/7/golH1YDL3Ff8B4ggNU34bLQ9loL/o6dwblkTVzM8++ghFNpIcgxdIMpOyDeiofVjTsE=
     on:
       branch: master
       repo: brewster1134/sourcerer
