--- a/spec/fixtures/i18n_spec.yml
+++ b/spec/fixtures/i18n_spec.yml
@@ -2,9 +2,9 @@ spec:
   sourcerer:
     errors:
       install:
-        multiple_packages_found: multiple_packages_found %{package} %{source_types}
-    
+        multiple_packages_found: multiple_packages_found %{package} %{types}
+
     cli:
       install:
-        installing_package: installing_package %{package} %{source} %{destination}
-        multiple_packages_found: multiple_packages_found
+        installing_package: installing_package %{package} %{type} %{destination}
+        multiple_packages_found: multiple_packages_found %{package}
