--- a/spec/fixtures/i18n_spec.yml
+++ b/spec/fixtures/i18n_spec.yml
@@ -1,10 +1,16 @@
 spec:
   sourcerer:
     errors:
-      install:
-        multiple_packages_found: multiple_packages_found %{package} %{types}
-
+      sourcerer:
+        install:
+          multiple_packages_found: multiple_packages_found %{package_name} %{types}
+      package:
+        search:
+          any_type:
+            no_packages_found: no_packages_found %{package_name} %{version}
+          single_type:
+            no_package_found: no_package_found %{package_name} %{version} %{type}
     cli:
       install:
-        installing_package: installing_package %{package} %{type} %{destination}
-        multiple_packages_found: multiple_packages_found %{package}
+        installing_package: installing_package %{package_name} %{type} %{destination}
+        multiple_packages_found: multiple_packages_found %{package_name}
