--- a/spec/fixtures/semantic_versions.yaml
+++ b/spec/fixtures/semantic_versions.yaml
@@ -1,29 +1,50 @@
-with_operator:
-  operators:
-    - '~'
-    - '~>'
-    - '<'
-    - '<='
-    - '>'
-    - '>='
-  versions:
-    - 1
-    - 1.2
-    - 1.2.3
-    - 1.2.3-alpha
-    - 1.2.3-alpha.4
-    - 1.2.3-alpha.4.5
-    - 1.2.3-alpha.4.5.6
-    - 1.2.3-alpha.4.5.6-rev
-    - 1.2.3-alpha.4.5.6-rev.7
-    - 1.2.3-alpha.4.5.6-rev.7.8
-    - 1.2.3-alpha.4.5.6-rev.7.8.9
-with_placeholder:
-  placeholders:
-    - 'x'
-  versions:
-    - 1
-    - 1.2
-    - 1.2.3-alpha
-    - 1.2.3-alpha.4
-    - 1.2.3-alpha.4.5
+placeholder: x
+operators:
+  - ''    # i.e. ==
+  - '~'
+  - '~>'
+  - '<'
+  - '<='
+  - '>'
+  - '>='
+versions:
+  -
+    version: '1'
+    full: '1.0.0'
+    full_incremented: '2.0.0'
+    placeholder: true
+  -
+    version: '1.2'
+    full: '1.2.0'
+    full_incremented: '2.0.0'
+    placeholder: true
+  -
+    version: '1.2.3'
+    full: '1.2.3'
+    full_incremented: '1.3.0'
+    placeholder: false
+  -
+    version: '1.2.3-pre'
+    full: '1.2.3-pre.0.0.0'
+    full_incremented: '1.2.3'
+    placeholder: true
+  -
+    version: '1.2.3-pre.4'
+    full: '1.2.3-pre.4.0.0'
+    full_incremented: '1.2.3-pre.5.0.0'
+    placeholder: true
+  -
+    version: '1.2.3-pre.4.5'
+    full: '1.2.3-pre.4.5.0'
+    full_incremented: '1.2.3-pre.5.0.0'
+    placeholder: true
+  -
+    version: '1.2.3-pre.4.5.6'
+    full: '1.2.3-pre.4.5.6'
+    full_incremented: '1.2.3-pre.4.6.0'
+    placeholder: false
+  -
+    version: '1.2.3-pre.4.5.6+build'
+    full: '1.2.3-pre.4.5.6+build'
+    full_incremented: '1.2.3-pre.4.5.6'
+    placeholder: true
