--- a/spec/fixtures/i18n_spec.yml
+++ b/spec/fixtures/i18n_spec.yml
@@ -3,19 +3,23 @@ spec:
     errors:
       cli:
         install:
-          no_package_found: no_package_found %{package_name}
+          no_package_found: no_package_found %{name}
       sourcerer:
         install:
-          multiple_packages_found: multiple_packages_found %{package_name} %{package_types}
-          no_package_found: no_package_found %{package_name}
+          multiple_packages_found: multiple_packages_found %{name} %{version} %{types}
+          no_package_found: no_package_found %{name}
       package:
+        download_failed: download_failed %{name} %{package_version}
+        method_not_defined: method_not_defined %{method_name} %{package_type}
+        search_failed: search_failed %{name} %{package_type}
+        version_failed: version_failed %{name} %{package_version}
         search:
           any_type:
-            no_packages_found: no_packages_found %{package_name} %{version}
+            no_packages_found: no_packages_found %{name} %{version}
           single_type:
-            no_package_found: no_package_found %{package_name} %{version} %{type}
+            no_package_found: no_package_found %{name} %{version} %{type}
     cli:
       install:
-        installing_package: installing_package %{package_name} %{type} %{destination}
-        multiple_packages_found: multiple_packages_found %{package_name}
-        no_package_found: no_package_found %{package_name}
+        installing_package: installing_package %{name} %{type} %{destination}
+        multiple_packages_found: multiple_packages_found %{name}
+        no_package_found: no_package_found %{name}
