--- a/spec/fixtures/i18n_spec.yml
+++ b/spec/fixtures/i18n_spec.yml
@@ -9,17 +9,30 @@ spec:
           multiple_packages_found: multiple_packages_found %{name} %{version} %{types}
           no_package_found: no_package_found %{name}
       package:
-        download_failed: download_failed %{name} %{package_version}
-        method_not_defined: method_not_defined %{method_name} %{package_type}
-        search_failed: search_failed %{name} %{package_type}
-        version_failed: version_failed %{name} %{package_version}
+        download:
+          failed: failed %{name} %{version}
+        method_not_defined: method_not_defined %{method_name} %{type}
         search:
-          any_type:
-            no_packages_found: no_packages_found %{name} %{version}
-          single_type:
-            no_package_found: no_package_found %{name} %{version} %{type}
+          failed: failed %{name} %{type}
+        version:
+          failed: failed %{name} %{version}
+    package:
+      download_success: download_success %{name} %{version} %{destination}
+
     cli:
       install:
-        installing_package: installing_package %{name} %{type} %{destination}
+        description: description
         multiple_packages_found: multiple_packages_found %{name}
-        no_package_found: no_package_found %{name}
+        pending: pending %{name} %{version} %{type}
+        success: success
+        options:
+          destination:
+            description: description
+          force:
+            description: description
+          type:
+            description: description
+          version:
+            description: description
+      help:
+        description: description
